# nanoDataRater

./: README.md  paper.md  pyproject.toml  spec.md
datarater/: __init__.py
datarater/configs/: base.yaml
datarater/data/: datamodule.py
datarater/models/: rater.py  tiny_lm.py
datarater/scripts/: prepare_slimpajama.py  run_meta.py  score_offline.py
datarater/train/: filtering.py  inner_step.py  meta_trainer.py
datarater/utils/: attention.py  logging.py  schedule.py  seed.py
tests/: test_filtering.py  test_flash_attention.py  test_meta_trainer.py  test_meta_trainer_cuda_smoke.py  test_rater.py  test_tinylm_cuda_smoke.py
